syntax = 'proto3';

package authPakage;

service AuthService {
    rpc createAccount (Account) returns (Response);
}

message Account {
    string infor = 1;
}

message Response {
    string response = 1;
}